# ur3_project

./: .gitignore  CMakeLists.txt  README.md  install.bash  package.xml  trash.txt
launch/: chess.launch  test.launch
msg/: Aruco.msg  Box.msg  ids.msg
src/: chess.py  chess_func.py  header.py  image_manager.py  piece.py  run.py  setup.bash  ur3_controller.py
test/: outline.txt  test.py  test_funcs.py
worlds/: chess.world  test.world
